Minimalist JRE docker build (experimental)